syntax = "proto3";

import "rewise/utils/common.proto";

package rw.to_raw;

// import from RJ CVS format
service CSharpService {
  rpc Run (Request) returns (Response) {}
  rpc ToMatrix (Request) returns (Response) {}
}

// request
message Request {
  repeated rw.common.FromToFiles files = 1;
}

// response: generates pb.from_csv.RawBooks to filesystem
message Response {
  string error = 1;
}

